Several class modifications, added setters and getters, and less global vars...

--- a/templates/rc.html
+++ b/templates/rc.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <link rel="favicon" href="/images/favicon.ico"/>
+    <link rel="icon" href="/images/favicon.ico"/>
     <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" type="text/css" href="css/rc.css">
     <link rel="stylesheet" href="/css/uikit.min.css" />
