--- a/templates/rc.html
+++ b/templates/rc.html
@@ -5,52 +5,53 @@
     <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" type="text/css" href="css/rc.css">
     <link rel="stylesheet" href="/css/uikit.min.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="/css/uikit-rtl.min.css" />
+    <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/uikit.min.js"></script>
     <title>{{ device }} remote control</title>
 </head>
 <body>
-    <div class="container uk-height-1-1 uk-text-center">
-        <div class="rcbody uk-grid uk-container-center uk-vertical-align-middle">
+    <div class="uk-container uk-container-center">
+        <div class="rcbody uk-grid uk-grid-collapse uk-text-center">
             {% for line in lines %}
-                {% for buton in line %}
-                    <div class="uk-width-1-{{ line | length }} button{{ line | length }} click" id="{{ buton["code"] }}">
-                        <div>{{ buton["label"] }}</div>
+                {% for button in line %}
+                    <div class="uk-width-1-{{ line | length }} button-commons button-{{ line | length }} click" id="{{ button["code"] }}">
+                        <div class="button-label uk-width-1-1">{{ button["label"] }}</div>
                     </div>
                 {% endfor %}
             {% endfor %}
         </div>
     </div>
     <script>
-        function send_once(key) {
-            $.post("{{ backend }}" + "/send_once", "remote={{ device }}&key=" + key);
-        }
-
-        function send_start(key) {
-            if (pressed) {
-                $.post("{{ backend }}" + "/send_start", "remote={{ device }}&key=" + key);
+            function send_once(key) {
+                $.post("{{ backend }}" + "/send_once", "remote={{ device }}&key=" + key);
             }
-        }
-
-        function send_stop(key) {
-            $.post("{{ backend }}" + "/send_stop", "remote={{ device }}&key=" + key);
-        }
-
-        var pressed = false;
-        $(".click").on('touchstart mousedown', function(e) {
-            e.preventDefault();
-            send_once($(this).attr('id'));
-            pressed = true;
-            setTimeout(send_start, 500, $(this).attr('id'));
-        });
-
-       $(".click").on('touchend mouseup', function(e) {
-            e.preventDefault();
-            if (pressed) {
-                send_stop($(this).attr('id'));
+            
+            function send_start(key) {
+                if (pressed) {
+                    $.post("{{ backend }}" + "/send_start", "remote={{ device }}&key=" + key);
+                }
             }
-            pressed = false;
-        });
-    </script>
+            
+            function send_stop(key) {
+                $.post("{{ backend }}" + "/send_stop", "remote={{ device }}&key=" + key);
+            }
+            
+            var pressed = false;
+            $(".click").on('touchstart mousedown', function(e) {
+                e.preventDefault();
+                send_once($(this).attr('id'));
+                pressed = true;
+                setTimeout(send_start, 500, $(this).attr('id'));
+            });
+            
+            $(".click").on('touchend mouseup', function(e) {
+                e.preventDefault();
+                if (pressed) {
+                    send_stop($(this).attr('id'));
+                }
+                pressed = false;
+            });
+        </script>
 </body>
 </html>
